update: pages workflow

--- a/.github/workflows/pages_publish.yml
+++ b/.github/workflows/pages_publish.yml
@@ -4,13 +4,24 @@ on:
   push:
     branches: ['main', 'master']
 
-jobs:
-  build-n-deploy:
-    runs-on: ubuntu-latest
-    permissions:
+  workflow_dispatch:
+permissions:
       contents: write
       pages: write
       id-token: write
+
+concurrency:
+  group: 'pages'
+  cancel-in-progress: false
+
+jobs:
+  build-n-deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -26,8 +37,17 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Zip the build output
+        run: zip -r dist.zip ./dist
+
+      - name: Set up GitHub Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload artifacts
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          path: ./dist
+
+      - name: Deploy to GitHub Pages
+        id: deploy
+        uses: actions/deploy-pages@v4
